syntax = "proto3";

import "common/v1/jobs.proto";

package d2.geo.v1;

option csharp_namespace = "D2.Services.Protos.Geo.V1";

// ********************************
// **** GeoJobService gRPC API ****
// ********************************

service GeoJobService {
  // Purge WhoIs records older than the retention period (Year/Month-based cutoff).
  // Should run BEFORE CleanupOrphanedLocations — deleting WhoIs may orphan Locations.
  rpc PurgeStaleWhoIs(d2.common.v1.TriggerJobRequest)
      returns (d2.common.v1.TriggerJobResponse);

  // Delete locations with zero contact and zero WhoIs references.
  rpc CleanupOrphanedLocations(d2.common.v1.TriggerJobRequest)
      returns (d2.common.v1.TriggerJobResponse);

  // Deferred to Stage C — requires @d2/auth-client to check user existence.
  // rpc CleanupOrphanedContacts(d2.common.v1.TriggerJobRequest)
  //     returns (d2.common.v1.TriggerJobResponse);
}
